# libcutils

./: .gitignore  Makefile  README.md  cross_file.txt  cross_mipsel.txt  cutils.h  dyn_string.c  dyn_string.h  meson.build  test.c  vector.c  vector.h
include/: meson.build
include/cutils/: backport.h  bitfuncs.h  byte_array.h  common.h  cutils.h  cutils_endian.h  dyn_string.h  extensions.h  linked-list.h  math.h  misc.h  vector.h
src/: bitfuncs.c  byte_array.c  dyn_string.c  extensions.c  linked-list.c  math.c  meson.build  misc.c  test.c  vector.c
